--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ PORT=8000
 
 ### Client Settings
 
-CLIENT_HOST=fishtank.webhop.me # That's my domain don't worry about the name.
+CLIENT_HOST=<put the server address here>
 CLIENT_PORT=8000
